tests/rt/neg/ifc/downgradeType.trp
let val x = if true raisedTo `{alice}`
            then 42
            else 21
    val _ = blockdown authority
    val x' = downgradeType (x, attenuate (authority, `{bob}`), `{}`)
in (x, x')
end

